<resources>
    <string name="app_name">MyProject</string>
    <string name="start_notification_monitor">开启通知监听服务</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="count">0</string>

    <!--首页-->
    <string name="mrcoin">Mr.coin(MyProject)</string>
    <string name="consignment_guide">寄售引导</string>
    <string name="consignment">寄售</string>
    <string name="charge_coin">充币</string>
    <string name="turn_coin">转币</string>
    <string name="receivables_code">收款码</string>
    <string name="capitalisation">市值</string>
    <string name="current_price">现价</string>
    <string name="consignment_of">寄售中</string>
    <string name="consignment_quota">今日可寄售额度</string>
    <string name="total_assets">总资产</string>

</resources>
